# jpeg-6b

./: .gitignore  CMakeLists.txt  CMakeSettings.json  jpeg-6b.def  jpeg-6b.vcxproj
jpeg-6b/: jpeg-6b.def  jpeg-6b.sln  jpeg-6b.vcxproj  jpeg-6b.vcxproj.filters
